<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookSessionFragment">


    <ImageView
        android:id="@+id/vector"
        android:layout_width="408dp"
        android:layout_height="203dp"
        android:src="@drawable/ic_vector__5_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/animation"
        android:layout_width="201dp"
        android:layout_height="166dp"
        android:src="@drawable/animation"
        app:layout_constraintBottom_toBottomOf="@+id/vector"
        app:layout_constraintEnd_toEndOf="@+id/vector"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/vector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="408dp"
        android:layout_height="235dp"
        android:layout_marginTop="@dimen/_36sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation">


        <TextView
            android:id="@+id/book_mentorship_session_easily"
            style="@style/Unim_Text_32sp_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/book_mentorship_session_easily"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/subtract1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_subtract"
            app:layout_constraintBottom_toBottomOf="@+id/the_duration_of_session"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/the_duration_of_session"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/the_duration_of_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/the_duration_of_session_will_be_30_minutes"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/subtract1"
            app:layout_constraintTop_toBottomOf="@+id/book_mentorship_session_easily" />

        <ImageView
            android:id="@+id/subtract2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/ic_subtract"
            app:layout_constraintBottom_toBottomOf="@+id/session_will_be_on_Zoom_video_call"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtract1" />

        <TextView
            android:id="@+id/session_will_be_on_Zoom_video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/session_will_be_on_Zoom_video_call"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.162"
            app:layout_constraintStart_toEndOf="@+id/subtract2"
            app:layout_constraintTop_toBottomOf="@+id/the_duration_of_session" />

        <ImageView
            android:id="@+id/subtract3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/ic_subtract"
            app:layout_constraintBottom_toBottomOf="@+id/session_link_will_be_sent_to_your_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtract2" />

        <TextView
            android:id="@+id/session_link_will_be_sent_to_your_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/session_link_will_be_sent_to_your_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/subtract3"
            app:layout_constraintTop_toBottomOf="@+id/session_will_be_on_Zoom_video_call"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/session_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        style="@style/Unim_Text_16sp_bold_no_black"
        android:textSize="@dimen/_16sdp"
        android:text="@string/session"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/please_be_prepared_to_ask_your_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/please_be_prepared_to_ask_your_questions"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_money" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/continue_button"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_be_prepared_to_ask_your_questions" />

    <TextView
        android:id="@+id/Terms_of_Service_and_Privacy_Policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/unim_blue_color"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/Terms_of_Service_and_Privacy_Policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_button" />

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/_48sdp"
        android:background="@color/unim_blue_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Terms_of_Service_and_Privacy_Policy"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>